--- a/style.css
+++ b/style.css
@@ -340,3 +340,14 @@ body {
     margin: 25px auto 0 auto;
     text-align: center;
 }
+/* Увеличил картинку в модалке */
+.modal-image {
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    border: 2px solid #00ffff;
+    box-shadow: 0 0 20px #00ffff;
+    margin: 0 auto 20px auto;
+    display: block;
+}
